--- a/src/pages/main/main.less
+++ b/src/pages/main/main.less
@@ -5,12 +5,11 @@
 	margin: 10px 0;
 
 	&-input{
+		border: 1px solid lightblue;
+		border-radius: 10px;
 		padding: 5px;
+		margin-right: 10px;
 		width: 100%;
-	}
-
-	&-btn {
-		padding: 5px;
 	}
 }
 .fetching{
@@ -39,6 +38,7 @@
 	margin: 20px 0;
 	.page, .current-page {
 		border: 1px solid lightblue;
+		border-radius: 10px;
 		padding: 5px 10px;
 		margin: 0 5px;
 		cursor: pointer;
