--- a/src/pages/main/user/user.less
+++ b/src/pages/main/user/user.less
@@ -1,14 +1,16 @@
-.repo {
+.user {
 	border: 1px solid lightblue;
 	padding: 20px;
+	margin: 5px;
 	display: flex;
+	border-radius: 10px;
 	flex-direction: column;
 
 	&-header{
 		display: flex;
 		justify-content: space-between;
-		margin-bottom: 20px;
 		&-name{
+			color: rgb(27, 140, 148);
 			font-size: 20px;
 			font-weight: 500;
 		}
