--- a/src/pages/CommitsPage/commitsPage.less
+++ b/src/pages/CommitsPage/commitsPage.less
@@ -5,6 +5,19 @@
         margin: 20px 0;
     }
 
+    &-nav{
+        max-width: 170px;
+        margin: 20px auto; 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &-btn{
+            opacity: 0.5;
+            pointer-events: none; 
+        }
+    }
+
     &-link{
         margin-bottom: 20px;
     }
