--- a/src/pages/userPage/userpage.less
+++ b/src/pages/userPage/userpage.less
@@ -27,6 +27,19 @@
 
     }
 
+    &-nav{
+        max-width: 170px;
+        margin: 20px auto; 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &-btn{
+            opacity: 0.5;
+            pointer-events: none; 
+        }
+    }
+
     &-table{
         
     text-align: center;
